@startuml

title __GAME_KURS's Class Diagram__\n

  namespace  {
    namespace om.example.OOPGame_Solovey {
      class com.example.OOPGame_Solovey.Controller {
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      class com.example.OOPGame_Solovey.GameApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      namespace Player {
        class com.example.OOPGame_Solovey.Player.Enemy {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      namespace Player {
        class com.example.OOPGame_Solovey.Player.Human {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      namespace Player {
        abstract class com.example.OOPGame_Solovey.Player.Player {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      namespace Player {
        namespace Shooting {
          class com.example.OOPGame_Solovey.Player.Shooting.ShootPlayer {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      namespace Player {
        namespace Shooting {
          abstract class com.example.OOPGame_Solovey.Player.Shooting.Shooting {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.OOPGame_Solovey {
      namespace Player {
        namespace Shooting {
          class com.example.OOPGame_Solovey.Player.Shooting.ShootingEnemy {
          }
        }
      }
    }
  }
  

  com.example.OOPGame_Solovey.Controller o-- com.example.OOPGame_Solovey.Player.Player : human
  com.example.OOPGame_Solovey.GameApplication -up-|> javafx.application.Application
  com.example.OOPGame_Solovey.Player.Enemy -up-|> com.example.OOPGame_Solovey.Player.Player
  com.example.OOPGame_Solovey.Player.Enemy o-- com.example.OOPGame_Solovey.Player.Shooting.ShootPlayer : ShootEnemyController
  com.example.OOPGame_Solovey.Player.Human -up-|> com.example.OOPGame_Solovey.Player.Player
  com.example.OOPGame_Solovey.Player.Human o-- com.example.OOPGame_Solovey.Player.Shooting.ShootPlayer : ShootPlayerController
  com.example.OOPGame_Solovey.Player.Shooting.ShootPlayer -up-|> com.example.OOPGame_Solovey.Player.Shooting.Shooting
  com.example.OOPGame_Solovey.Player.Shooting.ShootingEnemy -up-|> com.example.OOPGame_Solovey.Player.Shooting.Shooting


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
